--- a/components/CreditForm/creditform.module.scss
+++ b/components/CreditForm/creditform.module.scss
@@ -1,229 +1,308 @@
 .cardrow{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
 
-    .headline{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 12px;
-        margin-bottom: 32px;
+    .cardcol{
+        width: 60%;
+        margin-left: 30%;
 
-        .subheadline{
-            color: #475467;
-        }
-    }
-
-    .quoatacard{
-        width: 80%;
-        max-width: 400px;
-        border-radius: 12px;
-        flex-direction: column;
-        border: 1px  solid rgb(217, 217, 217);
-        background-color: #F9FAFB;
-
-        .tokendivider{
-            height: 2px;
-            background: #EAECF0;
-        }
-
-        .tokenslideritem{
-            display: flex;
-            flex-direction: column;
-            padding-left: 16px;
-            padding-right: 16px;
-
-            .tokenslider{
-                color: #1478FD;
-            }
-            
-        }
-
-        .tokenrow {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-
-            margin-bottom: 25px;
-
-            .tokens{
-                font-size: 24px;
-                font-weight: 700;
-                text-align: center;
-            }
-
-            .tokeninfo{
-                font-size: 16px;
-                color: #475467;
-                text-align: center;
-            }
-        }
-
-        .details {
-            font-size: 16px;
-
-            .singledetail{
-                color: #475467;
-                .detailhighlight {
-                    color: black;
-                    font-weight: 700;
-                    margin-left: 8px;
-                }
-
-                .savingsamount{
-                    color: #00cc33;
-                }
-            }
-
-            .listicon{
-                margin-right: 10px;
-            }
-        }
-
-        .quoataprice{
-            font-size: 32px;
-            font-weight: bold;
-            margin-top: 32px;
-        }
-        
-        .featuremap{
-            margin-top: 50px;
-            height: 300px;
-            padding-left: 20px;
-            padding-right: 20px;
-            .feature{
-                display: flex;
-                flex-direction: row;
-                text-align: left;
-
-                .featureicon{
-                    margin-right: 10px;
-                }
-            }
-        }
-
-        .summary{
+        .cards{
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
-
-            .summarytext{
-                font-weight: 700;
-                font-size: 18px;
+            gap: 16px;
+            width: 100%;
+    
+            .quoatacard{
+                width: 100%;
+                max-width: 400px;
+                border-radius: 12px;
+                flex-direction: column;
+                border: 1px  solid rgb(217, 217, 217);
+                background-color: #F9FAFB;
+                padding-top: 20px;
+                padding-bottom: 20px;
+        
+                .tokendivider{
+                    height: 2px;
+                    background: #EAECF0;
+                }
+        
+                .tokenslideritem{
+                    display: flex;
+                    flex-direction: column;
+                    padding-left: 16px;
+                    padding-right: 16px;
+        
+                    .tokenslider{
+                        color: #1478FD;
+                    }
+                    
+                }
+        
+                .tokenrow {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+        
+                    margin-bottom: 25px;
+        
+                    .tokens{
+                        font-size: 24px;
+                        font-weight: 700;
+                        text-align: center;
+                    }
+        
+                    .tokeninfo{
+                        font-size: 16px;
+                        color: #475467;
+                        text-align: center;
+                    }
+                }
+        
+                .details {
+                    font-size: 14px;
+                    padding-left: 10px;
+                    padding-right: 10px;
+        
+                    .specialdetail{
+                        font-weight: 800;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                        font-size: 16px;
+                    }
+        
+                    .singledetail{
+                        color: #475467;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+        
+                        .detailhighlight {
+                            color: black;
+                            font-weight: 700;
+                            margin-left: 8px;
+                        }
+        
+                        .savingsamount{
+                            color: #00cc33;
+                        }
+                    }
+        
+                    .listicon{
+                        margin-right: 10px;
+                    }
+                }
+        
+                .quoataprice{
+                    font-size: 32px;
+                    font-weight: bold;
+                    margin-top: 32px;
+                }
+                
+                .featuremap{
+                    margin-top: 50px;
+                    height: 300px;
+                    padding-left: 20px;
+                    padding-right: 20px;
+                    .feature{
+                        display: flex;
+                        flex-direction: row;
+                        text-align: left;
+        
+                        .featureicon{
+                            margin-right: 10px;
+                        }
+                    }
+                }
+        
+                .summary{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+        
+                    .summarytext{
+                        font-weight: 700;
+                        font-size: 18px;
+                    }
+        
+                    .summarysum{
+                        font-weight: 700;
+                        font-size: 18px;
+                    }
+                }
             }
-
-            .summarysum{
-                font-weight: 700;
-                font-size: 18px;
+    
+            .equalscard{
+                width: 100%;
+                max-width: 400px;
+                background-color: transparent;
+                border: 1px  solid rgb(217, 217, 217);
+                border-radius: 12px;
+    
+                display: flex;
+                flex-direction: column;
+    
+                padding-top: 20px;
+                padding-bottom: 20px;
+    
+                .equalstext {
+                    font-size: 24px;
+                    font-weight: 700;
+                    text-align: center;
+                    width: 100%;
+                }
+    
+                .equalssubheadline {
+                    font-size: 16px;
+                    color: #475467;
+                    text-align: center;
+                    margin-bottom: 32px;
+                }
+    
+                .costtable{
+                    width: 100%;
+                    color: #475467;
+    
+                    thead {
+                        font-size: 10px;
+                    }
+    
+                    .assistanttext{
+                        width: 90%;
+                        font-size: 12px;
+                    }
+    
+                    .assistantprice{
+                        width: 10%;
+                        padding-right: 5px;
+                    }
+                }
             }
         }
-    }
-
-    .buyrow{
-        width: 80%;
-        max-width: 400px;
-        margin-top: 32px;
-
-        .buybuttonrow{
+    
+        .headline{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            gap: 12px;
+            margin-bottom: 32px;
+            width: 50%;
+            max-width: 400px;
+    
+            .subheadline{
+                color: #475467;
+            }
+        }
+    
+        
+    
+        .buyrow{
+            width: 80%;
+            max-width: 400px;
             margin-top: 32px;
-
-            .buybutton{
-                margin-bottom: 20px;
-
-                @media(max-width: 992px){
-                    button {
-                        width: 200px;
-                        height: 44px;
-                        font-weight: 700;
-                        font-size: 16px;
-                        line-height: 24px;
-                        padding: 10px 18px 10px 18px;
-                        font-weight: bold;
-                    }
-                }
-                
-                @media(min-width: 993px){
-                    button {
-                        width: 446px;
-                        height: 44px;
-                        font-weight: 700;
-                        font-size: 16px;
-                        line-height: 24px;
-                        padding: 10px 18px 10px 18px;
-                        font-weight: bold;
-                    }
-                }
-            }
-        }
-
-        .checkout{
-            width: 100%;
-
-            .subscribe{
-                margin-left: 20px;
-            }
-
-            .checkoutheadline{
-                font-size: 20px;
-                font-weight: 700;
-                margin-bottom: 24px;
-            }
-
-            .savings {
-                font-size: 16px;
-
-                .singlesaving{
-                    color: #475467;
-                    margin-bottom: 24px;
-                    
-                    .savinghighlight {
-                        color: black;
-                        font-weight: 700;
-                        margin-left: 8px;
-                    }
-                }
-
-                .listicon{
-                    margin-right: 10px;
-                }
-            }
-        }
-
-        .checkouttable{
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            padding-right: 32px;
-
-            .topic{
+    
+            .buybuttonrow{
                 display: flex;
                 flex-direction: column;
-
-                .sumtext{
+                justify-content: center;
+                align-items: center;
+                margin-top: 32px;
+    
+                .buybutton{
+                    margin-bottom: 20px;
+    
+                    @media(max-width: 992px){
+                        button {
+                            width: 200px;
+                            height: 44px;
+                            font-weight: 700;
+                            font-size: 16px;
+                            line-height: 24px;
+                            padding: 10px 18px 10px 18px;
+                            font-weight: bold;
+                        }
+                    }
+                    
+                    @media(min-width: 993px){
+                        button {
+                            width: 446px;
+                            height: 44px;
+                            font-weight: 700;
+                            font-size: 16px;
+                            line-height: 24px;
+                            padding: 10px 18px 10px 18px;
+                            font-weight: bold;
+                        }
+                    }
+                }
+            }
+    
+            .checkout{
+                width: 100%;
+    
+                .subscribe{
+                    margin-left: 20px;
+                }
+    
+                .checkoutheadline{
+                    font-size: 20px;
+                    font-weight: 700;
+                    margin-bottom: 24px;
+                }
+    
+                .savings {
+                    font-size: 16px;
+    
+                    .singlesaving{
+                        color: #475467;
+                        margin-bottom: 24px;
+                        
+                        .savinghighlight {
+                            color: black;
+                            font-weight: 700;
+                            margin-left: 8px;
+                        }
+                    }
+    
+                    .listicon{
+                        margin-right: 10px;
+                    }
+                }
+            }
+    
+            .checkouttable{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                padding-right: 32px;
+    
+                .topic{
+                    display: flex;
+                    flex-direction: column;
+    
+                    .sumtext{
+                        font-weight: 700;
+                        font-size: 16px;
+                    }
+    
+                    .sumsubtitle{
+                        font-size: 11px;
+                        color: lightgray
+                    }
+                    
+                }
+    
+                .value {
                     font-weight: 700;
                     font-size: 16px;
                 }
-
-                .sumsubtitle{
-                    font-size: 11px;
-                    color: lightgray
-                }
                 
             }
-
-            .value {
-                font-weight: 700;
-                font-size: 16px;
-            }
-            
         }
     }
 }
