--- a/components/RechargeForm/rechargeform.module.scss
+++ b/components/RechargeForm/rechargeform.module.scss
@@ -87,10 +87,24 @@
         }
 
         .details {
-            font-size: 16px;
+            font-size: 14px;
+            padding-left: 10px;
+            padding-right: 10px;
+
+            .specialdetail{
+                font-weight: 800;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                font-size: 16px;
+            }
 
             .singledetail{
                 color: #475467;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+
                 .detailhighlight {
                     color: black;
                     font-weight: 700;
